--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     }
   },
   "keywords": ["unreal", "engine", "builder", "electron"],
-  "author": "",
+  "author": "Dominik Morse | Mountea Framework",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^25.0.3",
